--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,16 +1,17 @@
-name: Second Actions Workflow
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: First Actions Workflow
+run-name: ${{ github.actor }} is running GitHub Actions 🚀 script
 on: [push]
 jobs:
-  display-python-version:
+  demonstrate-first-workflow:
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-python@v4
-          with:
-            python-version: '3.x'
-            architecture: 'x64'
-        - name: Display Python version
-          run: |
-            python -c "import sys; print(f'This runner uses Python: {sys.version} !')"
-            echo "Congratulations! Your script completed successfully!"
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
